<resources>
    <string name="app_name">USB Camera</string>
    <string name="action_settings">Settings</string>
    <string name="action_video_format">Video Format</string>
    <string name="action_device_info">Device Info</string>
    <string name="action_mirror">Mirror</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="action_control">Controls</string>
    <string name="action_usb">USB</string>

    <string name="main_connect_usb_tip">Connect the USB camera</string>

    <string name="select">Select USB Web Camera</string>
    <string name="camera">Camera</string>
    <string name="refresh">Refresh</string>
    <string name="no_device">No USB camera found</string>
</resources>